--- a/html/ui.html
+++ b/html/ui.html
@@ -9,29 +9,28 @@
     <title>Voting</title>
 
     <!--CSS and images links-->
+    <link rel="preload" href="./fonts/KumbhSans-SemiBold.ttf" as="font" crossorigin="anonymous"/>
+    <link rel="preload" href="./fonts/KumbhSans-VariableFont_wght.ttf" as="font" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="preload" href="./fonts/KumbhSans-VariableFont_wght.ttf" as="font" crossorigin="anonymous" />
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
+        <div id="container" class="container">
             <div class="job-container">
-                
-            </div>
-            <div class="job-container">
-
-            </div>
-            <div class="job-container">
-
-            </div>
-            <div class="job-container">
-
+                <div class="info-container">
+                    <div class="job-wave"></div>
+                    <img class="job-logo" src="./img/test.jpg" alt="Logo">
+                    <span class="title">Ms. Allisa</span>
+                    <span class="description">Wowie a paid resource? What a fucking surprise</span>
+                </div>
+                <div class="hover-container">
+                    <span class="location">Your Mom</span>
+                    <button class="info-btn">Vote Now</button>
+                </div>
             </div>
         </div>
     </div>
 
-    <script type="text/javascript" src="./js/nui.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
-    <script defer src="https://kit.fontawesome.com/3828d6dd29.js" crossorigin="anonymous"></script>
 </body>
 </html>
