refactor(manifest): change to single file

--- a/html/ui.html
+++ b/html/ui.html
@@ -16,18 +16,7 @@
 <body>
     <div class="wrapper">
         <div id="container" class="container">
-            <div class="job-container">
-                <div class="info-container">
-                    <div class="job-wave"></div>
-                    <img class="job-logo" src="./img/test.jpg" alt="Logo">
-                    <span class="title">Ms. Allisa</span>
-                    <span class="description">Wowie a paid resource? What a fucking surprise</span>
-                </div>
-                <div class="hover-container">
-                    <span class="location">Your Mom</span>
-                    <button class="info-btn">Vote Now</button>
-                </div>
-            </div>
+            <!--Data from Javascript-->
         </div>
     </div>
 
