feat(core): Final design + Main functionality

--- a/html/ui.html
+++ b/html/ui.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div id="wrapper" class="wrapper">
         <div id="container" class="container">
             <!--Data from Javascript-->
         </div>
